[gd_scene load_steps=6 format=2]

[ext_resource path="res://HUD/HUD.gd" type="Script" id=1]
[ext_resource path="res://ButtonSoundPlayer/ButtonSoundPlayer.tscn" type="PackedScene" id=2]
[ext_resource path="res://Common/PressStart2P-Regular.ttf" type="DynamicFontData" id=3]

[sub_resource type="DynamicFont" id=1]
size = 48
use_filter = true
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=2]
size = 72
use_filter = true
font_data = ExtResource( 3 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 1 )

[node name="RestartButton" type="Button" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -332.0
margin_top = -87.0
margin_right = 332.0
custom_colors/font_color = Color( 0.184314, 0.690196, 0.901961, 1 )
custom_colors/font_color_hover = Color( 0.0705882, 0.541176, 0.737255, 1 )
custom_colors/font_color_pressed = Color( 0.0509804, 0.317647, 0.588235, 1 )
custom_fonts/font = SubResource( 1 )
text = "Restart"

[node name="WinText" type="Label" parent="."]
visible = false
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_left = 1.0
margin_top = -129.0
margin_right = 1.0
margin_bottom = -115.0
custom_colors/font_color = Color( 0.854902, 0.0784314, 0.0784314, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_constants/shadow_offset_x = 8
custom_constants/shadow_offset_y = 4
custom_fonts/font = SubResource( 2 )
text = "YOU WON!"
align = 1

[node name="ButtonSoundPlayer" parent="." instance=ExtResource( 2 )]

[connection signal="pressed" from="RestartButton" to="." method="_on_RestartButton_pressed"]
[connection signal="timeout" from="ButtonSoundPlayer" to="." method="_on_ButtonSoundPlayer_timeout"]
